5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4147/executions/1593_2043.log
== TEST (2019-03-27 08:31:34) 
-- CODE:
av1 = float(input("Nota da av1: "))
av2 = float(input("Nota da av2: "))
av3 = float(input("Nota da av3: "))
av4 = float(input("Nota da av4: "))
notas = (av1 + av2 + av3 + av4) / 4
prtint(round(notas,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prtint(round(notas,2))
NameError: name 'prtint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 08:32:03) 
-- CODE:
av1 = float(input("Nota da av1: "))
av2 = float(input("Nota da av2: "))
av3 = float(input("Nota da av3: "))
av4 = float(input("Nota da av4: "))
notas = (av1 + av2 + av3 + av4) / 4
print(round(notas,2))

-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 08:32:27) 
-- CODE:
av1 = float(input("Nota da av1: "))
av2 = float(input("Nota da av2: "))
av3 = float(input("Nota da av3: "))
av4 = float(input("Nota da av4: "))
notas = (av1 + av2 + av3 + av4) / 3
print(round(notas,2))

-- OUTPUT:
10.83
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 08:32:37) 
-- CODE:
av1 = float(input("Nota da av1: "))
av2 = float(input("Nota da av2: "))
av3 = float(input("Nota da av3: "))
av4 = float(input("Nota da av4: "))
notas = (av1 + av2 + av3 + av4) / 3
print(round(notas,2))

-- EXECUTION TIME:
0.200258
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
10.83
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
9.33
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
9.86
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 08:32:54) 
-- CODE:
av1 = float(input("Nota da av1: "))
av2 = float(input("Nota da av2: "))
av3 = float(input("Nota da av3: "))
av4 = float(input("Nota da av4: "))
notas = (av1 + av2 + av3 + av4) // 3
print(round(notas,2))

-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 08:33:08) 
-- CODE:
av1 = float(input("Nota da av1: "))
av2 = float(input("Nota da av2: "))
av3 = float(input("Nota da av3: "))
av4 = float(input("Nota da av4: "))
notas = (av1 + av2 + av3 + av4) // 4
print(round(notas,2))

-- OUTPUT:
8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 08:34:50) 
-- CODE:
av1 = float(input("Nota da av1: "))
av2 = float(input("Nota da av2: "))
av3 = float(input("Nota da av3: "))
av4 = float(input("Nota da av4: "))
notas = (av1 * 1 + av2 * 2 + av3 * 3 + av4 * 4)
print(round(notas,2))

-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 08:35:04) 
-- CODE:
av1 = float(input("Nota da av1: "))
av2 = float(input("Nota da av2: "))
av3 = float(input("Nota da av3: "))
av4 = float(input("Nota da av4: "))
notas = (av1 * 1 + av2 * 2 + av3 * 3 + av4 * 4) / 4
print(round(notas,2))

-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 08:35:16) 
-- CODE:
av1 = float(input("Nota da av1: "))
av2 = float(input("Nota da av2: "))
av3 = float(input("Nota da av3: "))
av4 = float(input("Nota da av4: "))
notas = (av1 * 1 + av2 * 2 + av3 * 3 + av4 * 4) / 4
print(round(notas,2))

-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 08:35:43) 
-- CODE:
av1 = float(input("Nota da av1: "))
av2 = float(input("Nota da av2: "))
av3 = float(input("Nota da av3: "))
av4 = float(input("Nota da av4: "))
notas = (av1 * 1 + av2 * 2 + av3 * 3 + av4 * 4) / 10
print(round(notas,2))

-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 08:35:49) 
-- CODE:
av1 = float(input("Nota da av1: "))
av2 = float(input("Nota da av2: "))
av3 = float(input("Nota da av3: "))
av4 = float(input("Nota da av4: "))
notas = (av1 * 1 + av2 * 2 + av3 * 3 + av4 * 4) / 10
print(round(notas,2))

-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 08:35:49) 
-- CODE:
av1 = float(input("Nota da av1: "))
av2 = float(input("Nota da av2: "))
av3 = float(input("Nota da av3: "))
av4 = float(input("Nota da av4: "))
notas = (av1 * 1 + av2 * 2 + av3 * 3 + av4 * 4) / 10
print(round(notas,2))

-- EXECUTION TIME:
0.11172
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
Nota da av1: Nota da av2: Nota da av3: Nota da av4: 8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
Nota da av1: Nota da av2: Nota da av3: Nota da av4: 7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Nota da av1: Nota da av2: Nota da av3: Nota da av4: 7.94
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 08:35:51) 
-- CODE:
av1 = float(input("Nota da av1: "))
av2 = float(input("Nota da av2: "))
av3 = float(input("Nota da av3: "))
av4 = float(input("Nota da av4: "))
notas = (av1 * 1 + av2 * 2 + av3 * 3 + av4 * 4) / 10
print(round(notas,2))

-- EXECUTION TIME:
0.173535
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
